main/index.jsp update

--- a/meeting/src/main/webapp/resources/assets/css/style_original.css
+++ b/meeting/src/main/webapp/resources/assets/css/style_original.css
@@ -4,68 +4,9 @@
 * Author: BootstrapMade.com
 * License: https://bootstrapmade.com/license/
 */
-
 /*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-body {
-  background: #fff;
-  color: #666666;
-  font-family: "Open Sans", sans-serif;
-  overflow-x: hidden;
-}
-
-a {
-  color: #1dc8cd;
-  transition: 0.5s;
-}
-
-a:hover, a:active, a:focus {
-  color: #1dc9ce;
-  outline: none;
-  text-decoration: none;
-}
-
-p {
-  padding: 0;
-  margin: 0 0 30px 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  margin: 0 0 20px 0;
-  padding: 0;
-}
-
-/* Back to top button */
-.back-to-top {
-  position: fixed;
-  display: none;
-  background: linear-gradient(45deg, #1de099, #1dc8cd);
-  color: #fff;
-  padding: 2px 20px 8px 20px;
-  font-size: 16px;
-  border-radius: 4px 4px 0 0;
-  right: 15px;
-  bottom: 0;
-  transition: none;
-}
-
-.back-to-top:focus {
-  background: linear-gradient(45deg, #1de099, #1dc8cd);
-  color: #fff;
-  outline: none;
-}
-
-.back-to-top:hover {
-  background: #1dc8cd;
-  color: #fff;
-}
-
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+  # Header
+  --------------------------------------------------------------*/
 #header {
   padding: 30px 0;
   height: 92px;
@@ -73,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   top: 0;
   right: 0;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   z-index: 997;
   background: linear-gradient(45deg, #1de099, #1dc8cd);
@@ -94,7 +36,8 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-#header #logo h1 a, #header #logo h1 a:hover {
+#header #logo h1 a,
+#header #logo h1 a:hover {
   color: #fff;
 }
 
@@ -121,16 +64,22 @@ h1, h2, h3, h4, h5, h6 {
   background: linear-gradient(45deg, #1de099, #1dc8cd);
   padding: 20px 0;
   height: 72px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
 /*--------------------------------------------------------------
-# Intro Section
---------------------------------------------------------------*/
+    # Intro Section
+    --------------------------------------------------------------*/
 #intro {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, rgba(29, 224, 153, 0.4), rgba(29, 200, 205, 0.4)), url("../img/index_bg.jpg") center top no-repeat;
+  background: linear-gradient(
+      45deg,
+      rgba(29, 224, 153, 0.8),
+      rgba(29, 200, 205, 0.8)
+    ),
+    url("../img/intro-bg.jpg") center top no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -147,10 +96,19 @@ h1, h2, h3, h4, h5, h6 {
   top: 60px;
   right: 0;
   height: calc(50% - 60px);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -193,6 +151,7 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
   padding: 8px 28px;
   border-radius: 50px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   margin: 10px;
   border: 2px solid #fff;
@@ -216,6 +175,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #intro .product-screens img {
+  -webkit-box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29);
   box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29);
 }
 
@@ -248,16 +208,18 @@ h1, h2, h3, h4, h5, h6 {
     position: static;
     padding-top: 30px;
   }
-  #intro .product-screens .product-screen-2, #intro .product-screens .product-screen-3 {
+  #intro .product-screens .product-screen-2,
+  #intro .product-screens .product-screen-3 {
     display: none;
   }
 }
 
 /*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+    # Navigation Menu
+    --------------------------------------------------------------*/
 /* Nav Menu Essentials */
-.nav-menu, .nav-menu * {
+.nav-menu,
+.nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -349,29 +311,37 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   background-color: #fff;
   visibility: hidden;
+  -webkit-transform: scaleX(0);
   transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
 
-.nav-menu a:hover:before, .nav-menu li:hover > a:before, .nav-menu .menu-active > a:before {
+.nav-menu a:hover:before,
+.nav-menu li:hover > a:before,
+.nav-menu .menu-active > a:before {
   visibility: visible;
+  -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
 
 .nav-menu ul {
   margin: 4px 0 0 0;
   padding: 10px;
+  -webkit-box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   background: #fff;
 }
 
 .nav-menu ul li {
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .nav-menu ul li a {
   padding: 10px;
   color: #333;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   display: block;
   font-size: 13px;
@@ -397,6 +367,7 @@ h1, h2, h3, h4, h5, h6 {
   background: none;
   font-size: 24px;
   display: none;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
   outline: none;
   cursor: pointer;
@@ -423,6 +394,7 @@ h1, h2, h3, h4, h5, h6 {
   left: -260px;
   width: 260px;
   overflow-y: auto;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -498,10 +470,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /*--------------------------------------------------------------
-# Sections
---------------------------------------------------------------*/
+    # Sections
+    --------------------------------------------------------------*/
 /* Sections Header
---------------------------------*/
+    --------------------------------*/
 .section-header .section-title {
   font-size: 32px;
   color: #111;
@@ -521,20 +493,27 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 60px;
   height: 3px;
   background: #1dc8cd;
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#1dc8cd),
+    to(#55fabe)
+  );
   background: linear-gradient(0deg, #1dc8cd 0%, #55fabe 100%);
   margin: 0 auto;
   margin-bottom: 20px;
 }
 
 /* Section with background
---------------------------------*/
+    --------------------------------*/
 .section-bg {
   background: #eff5f5;
 }
 
 /*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
+    # Breadcrumbs
+    --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 20px 0;
   min-height: 40px;
@@ -560,7 +539,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .breadcrumbs ol {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
@@ -592,7 +574,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* About Us Section
---------------------------------*/
+    --------------------------------*/
 #about {
   padding: 60px 0;
   overflow: hidden;
@@ -656,7 +638,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Product Featuress Section
---------------------------------*/
+    --------------------------------*/
 #features {
   background: #fff;
   padding: 60px 0 0 0;
@@ -691,6 +673,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #features .icon i {
   color: #666666;
   font-size: 40px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -723,7 +706,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Product Advanced Featuress Section
---------------------------------*/
+    --------------------------------*/
 #advanced-features {
   overflow: hidden;
 }
@@ -755,6 +738,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #advanced-features i {
   color: #666666;
   font-size: 64px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   float: left;
   padding: 0 15px 0px 0;
@@ -782,13 +766,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (max-width: 768px) {
-  #advanced-features .advanced-feature-img-right, #advanced-features .advanced-feature-img-left {
+  #advanced-features .advanced-feature-img-right,
+  #advanced-features .advanced-feature-img-left {
     max-width: 50%;
   }
 }
 
 @media (max-width: 767px) {
-  #advanced-features .advanced-feature-img-right, #advanced-features .advanced-feature-img-left {
+  #advanced-features .advanced-feature-img-right,
+  #advanced-features .advanced-feature-img-left {
     max-width: 100%;
     float: none;
     padding: 0 0 30px 0;
@@ -796,10 +782,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Call To Action Section
---------------------------------*/
+    --------------------------------*/
 #call-to-action {
   overflow: hidden;
-  background: linear-gradient(rgba(29, 200, 205, 0.65), rgba(29, 205, 89, 0.2)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(29, 200, 205, 0.65)),
+      to(rgba(29, 205, 89, 0.2))
+    ),
+    url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(29, 200, 205, 0.65), rgba(29, 205, 89, 0.2)),
+    url(../img/call-to-action-bg.jpg) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -816,8 +811,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @media (min-width: 769px) {
   #call-to-action .cta-btn-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
   }
 }
@@ -830,6 +831,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: inline-block;
   padding: 8px 30px;
   border-radius: 25px;
+  -webkit-transition: background 0.5s;
   transition: background 0.5s;
   margin: 10px;
   border: 2px solid #fff;
@@ -842,7 +844,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* More Features Section
---------------------------------*/
+    --------------------------------*/
 #more-features {
   padding: 60px 0 60px 0;
   overflow: hidden;
@@ -851,8 +853,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 #more-features .box {
   padding: 40px;
   margin-bottom: 30px;
+  -webkit-box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
   box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
   background: #fff;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -863,6 +867,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #more-features .icon i {
   color: #666666;
   font-size: 80px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   line-height: 0;
 }
@@ -902,14 +907,15 @@ body.mobile-nav-active #mobile-nav-toggle {
     text-align: center;
     padding-bottom: 15px;
   }
-  #more-features h4, #more-features p {
+  #more-features h4,
+  #more-features p {
     margin-left: 0;
     text-align: center;
   }
 }
 
 /* Clients Section
---------------------------------*/
+    --------------------------------*/
 #clients {
   padding: 30px 0;
   background: #fff;
@@ -919,6 +925,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #clients img {
   max-width: 100%;
   opacity: 0.5;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   padding: 15px 0;
 }
@@ -928,7 +935,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Pricing Section
---------------------------------*/
+    --------------------------------*/
 #pricing {
   padding: 60px 0 60px 0;
   overflow: hidden;
@@ -937,6 +944,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #pricing .box {
   padding: 40px;
   margin-bottom: 30px;
+  -webkit-box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
   box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
   background: #fff;
   text-align: center;
@@ -988,6 +996,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 6px 30px;
   border-radius: 20px;
   color: #fff;
+  -webkit-transition: none;
   transition: none;
   font-size: 14px;
   font-weight: 400;
@@ -1003,7 +1012,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Frequently Asked Questions Section
---------------------------------*/
+    --------------------------------*/
 #faq {
   padding: 60px 0;
   overflow: hidden;
@@ -1062,7 +1071,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Our Team Section
---------------------------------*/
+    --------------------------------*/
 #team {
   padding: 60px 0;
   overflow: hidden;
@@ -1113,7 +1122,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Gallery Section
---------------------------------*/
+    --------------------------------*/
 #gallery {
   background: #fff;
   padding: 60px 0 0 0;
@@ -1133,6 +1142,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 100%;
   height: 100%;
   opacity: 1;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
 
@@ -1145,11 +1155,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #gallery .gallery-item img {
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
   width: 100%;
 }
 
 #gallery .gallery-item:hover img {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
@@ -1159,8 +1171,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* Contact Section
---------------------------------*/
+    --------------------------------*/
 #contact {
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   padding: 60px 0;
   overflow: hidden;
@@ -1201,6 +1214,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   width: 36px;
   height: 36px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   border: 1px solid #1dc8cd;
 }
@@ -1273,13 +1287,16 @@ body.mobile-nav-active #mobile-nav-toggle {
   animation: animate-loading 1s linear infinite;
 }
 
-#contact .php-email-form input, #contact .php-email-form textarea {
+#contact .php-email-form input,
+#contact .php-email-form textarea {
   border-radius: 0;
+  -webkit-box-shadow: none;
   box-shadow: none;
   font-size: 14px;
 }
 
-#contact .php-email-form input::focus, #contact .php-email-form textarea::focus {
+#contact .php-email-form input::focus,
+#contact .php-email-form textarea::focus {
   background-color: #1dc8cd;
 }
 
@@ -1297,27 +1314,32 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @-webkit-keyframes animate-loading {
   0% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
+    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @keyframes animate-loading {
   0% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
+    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 /*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+    # Footer
+    --------------------------------------------------------------*/
 #footer {
   background: #fff;
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   padding: 30px 0;
   color: #333;
@@ -1341,3 +1363,4 @@ body.mobile-nav-active #mobile-nav-toggle {
 #footer .footer-links a:hover {
   color: #1dc8cd;
 }
+/*# sourceMappingURL=style.css.map */
