--- a/meeting/src/main/webapp/resources/assets/css/style.css
+++ b/meeting/src/main/webapp/resources/assets/css/style.css
@@ -63,6 +63,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
+#boardContent{
+	margin-top:100px;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -130,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
 #intro {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, rgba(29, 224, 153, 0.4), rgba(29, 200, 205, 0.4)), url("../img/index_bg.jpg") center top no-repeat;
+  background: linear-gradient(45deg, rgba(29, 224, 153, 0.4), rgba(29, 200, 205, 0.4)), url("/resources/assets/img/index_bg.jpg") center top no-repeat;
   background-size: cover;
   position: relative;
 }
